--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 
        <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d608767.4521185086!2d-112.50687434912003!3d35.02525528087338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530253724394" width="1200" height="475" frameborder="0" style="border:0" allowfullscreen></iframe>
-       <!--  <div>
-        <img src="img/map.png"  width="1200" height="475" alt="Карта">
-        </div> -->
+        <iframe class="interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d608767.4521185086!2d-112.50687434912003!3d35.02525528087338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530253724394"  width="1200" height="594" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div>
+        <img src="img/map.png"  width="1200" height="594" alt="Карта">
+        </div>
       </section>
     </main>
 
@@ -199,7 +199,7 @@
         </div>
       </div>
 	   </footer>
+   </div>
     <script src="js/file.js"></script>
-    </div>
   </body>
 </html>
