--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <title>Sedona</title>
 	 <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
 	 <link href="css/normalize.css" rel="stylesheet">
-	 <link href="css/style.css" rel="stylesheet">
+	 <link href="css/style.min.css" rel="stylesheet">
 	</head>
 	<body>
     <div class="wrapper-shadow">
@@ -124,16 +124,17 @@
 				 <h2 class="modal-title">Заинтересовались?</h2>
 				 <p class="modal-tip">Укажите предполагаемые даты поездки,<br>
 					и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <button class="button modal-close" type="button">
+            <a class="button modal-close" href="form.html">
+              <span class="visually-hidden">Открыть форму</span>
               Поиск гостиницы в Седоне
-          </button>
-
+            </a>
 				  <form class="modal" action="https://echo.htmlacademy.ru" method="get">
             <div class="date-selection">
 					   <div class="modal-form-group arrival">
 						  <label for="arrival-date">Дата заезда:</label>
 						  <input class="select-arrival" id="arrival-date" type="text" name="arrival-date" value="" placeholder="24 апреля 2017">
               <button class="calendar" type="button">
+                <span class="visually-hidden">Выбрать дату заезда</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
             </button>
 					 </div>
@@ -142,6 +143,7 @@
 						<label for="departure-date">Дата выезда:</label>
 						<input class="select-departure" id="departure-date" type="text" name="departure-date" value="" placeholder="4 июля 2017">
             <button class="calendar" type="button">
+              <span class="visually-hidden">Выбрать дату выезда</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
             </button>
 					 </div>
@@ -181,10 +183,8 @@
 
        <section class="map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe class="interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d608767.4521185086!2d-112.50687434912003!3d35.02525528087338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530253724394"  width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div>
-        <img src="img/map.png"  width="1200" height="593" alt="Карта">
-        </div>
+        <iframe class="interactive-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d608767.4521185086!2d-112.50687434912003!3d35.02525528087338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1530253724394"  width="1200" height="593" allowfullscreen></iframe>
+          <img src="img/map.png"  width="1200" height="593" alt="Карта">
       </section>
     </main>
 
@@ -217,6 +217,6 @@
       </div>
 	   </footer>
    </div>
-    <script src="js/file.js"></script>
+    <script src="js/file.min.js"></script>
   </body>
 </html>
