правки после проверки

--- a/hotels.html
+++ b/hotels.html
@@ -71,9 +71,9 @@
               <h3 class="filter-title">Стоимость в сутки (р):</h3>
               <div class="price-controls">
                 <label class="min-price" for="min-price">от</label>
-                <input id="min-price" type="text" name="min-price" value="0">
+                <input id="min-price" type="text" name="min-price" placeholder="0">
                 <label class="max-price" for="max-price">до</label>
-                <input id="max-price" type="text" name="max-price" value="3000">
+                <input id="max-price" type="text" name="max-price" placeholder="3000">
               </div>
               <div class="range-controls">
                 <div class="scale">
