--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   городок
                 </h3>
                 <span class="number">— №1 —</span>
-                <p class="definition">Седона - неаттракцион для туристов,<br>
+                <p class="definition">Седона — неаттракцион для туристов,<br>
                   там течет своя жизнь
                 </p>
               </div>
@@ -139,7 +139,7 @@
           <span class="visually-hidden">Открыть форму</span>
           Поиск гостиницы в Седоне
           </a>
-          <form class="modal" action="https://echo.htmlacademy.ru" method="get">
+          <form class="modal modal-show" action="https://echo.htmlacademy.ru" method="get">
             <div class="date-selection">
               <div class="modal-form-group arrival">
                 <label for="arrival-date">Дата заезда:</label>
@@ -167,25 +167,25 @@
                 <div class="modal-form-group">
                   <label for="adults">Взрослые:</label>
                   <div class="adults">
-                    <div class="minus">
+                    <button class="minus" type="button">
                       <span class="visually-hidden">Убавить</span>
-                    </div>
+                    </button>
                     <input class="select-adults" id="adults" type="text" name="adults" value="" placeholder="2">
-                    <div class="plus">
+                    <button class="plus" type="button">
                       <span class="visually-hidden">Добавить</span>
-                    </div>
+                    </button>
                   </div>
                 </div>
                 <div class="modal-form-group">
                   <label for="children">Дети:</label>
                   <div class="child">
-                    <div class="minus">
+                    <button class="minus" type="button">
                       <span class="visually-hidden">Убавить</span>
-                    </div>
+                    </button>
                     <input class="select-child" id="children" type="text" name="children" value="" placeholder="0">
-                    <div class="plus">
+                    <button class="plus">
                       <span class="visually-hidden">Добавить</span>
-                    </div>
+                    </button>
                   </div>
                 </div>
               </div>
