забыла добавить класс

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <span class="visually-hidden">Открыть форму</span>
           Поиск гостиницы в Седоне
           </a>
-          <form class="modal" action="https://echo.htmlacademy.ru" method="get">
+          <form class="modal modal-show" action="https://echo.htmlacademy.ru" method="get">
             <div class="date-selection">
               <div class="modal-form-group arrival">
                 <label for="arrival-date">Дата заезда:</label>
