--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sedona</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper-shadow">
@@ -51,12 +51,12 @@
                   городок
                 </h3>
                 <span class="number">— №1 —</span>
-                <p class="definition">Седона — не аттракцион для туристов,<br>
+                <p class="definition">Седона — не аттракцион для туристов,
                   там течет своя жизнь
                 </p>
               </div>
-              <div>
-                <img class="portrait" src="img/city-1200.jpg" width="800" height="256" alt="Городок">
+              <div class="portrait portrait-1">
+                <img src="img/city-768.jpg" width="800" height="400" alt="Городок">
               </div>
             </li>
             <li class="offers-list">
@@ -90,7 +90,7 @@
                 </p>
               </div>
               <div>
-                <img class="portrait" src="img/bridge-1200.jpg"  width="800" height="256" alt="Мост">
+                <img class="portrait portrait-2" src="img/bridge-768.jpg"  width="800" height="400" alt="Мост">
               </div>
             </li>
             <li class="features-item add-on">
